--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>Forum!</div>
-        <a href="assunto">Assunto!</a>
-        
+        <a href="assuntos">Assuntos!</a>
     </body>
 </html>
