--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Free Forum !</title>
         <meta charset="ISO-8859-1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style/estilo.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div>Forum!</div>
